[package]
name = "sporting_shot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
csv = "1.3.0"
futures = "0.3.30"
headless_chrome = "1.0.13"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = {version = "0.12.7", features = ["blocking"]}
scraper = "0.20.0"
serde = {version = "1.0.209", features = ["derive"]}
tokio = { version = "1.40.0", features = ["full"] }
